--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-router-classic-vite-tailwind-icon",
+  "name": "sae203-alicia-iversenc",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
