--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/vue": "^1.0.6",
     "heroicon": "^0.0.2",
     "vue": "^3.2.33",
+    "vue-heroicons": "^0.9.4",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
